[findbugs] Use more efficient valueOf() instead of new Integer()
Change-Id: I4cb6d3e9206a2be312624363cb895700d9c3ecd9
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>