@@ -171,7 +171,7 @@ class GitSynchronizeWizardPage extends WizardPage {
 					String branch = selectedBranches.get(element);
 					CCombo combo = (CCombo) branchesEditor.getControl();
 					int index = branch == null ? 0 : combo.indexOf(branch);
-					return new Integer(index);
+					return Integer.valueOf(index);
 				}
 			}
 
